[package]
name = "power-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.2.1-dev", default-features=false }
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", rev = "1c0a988d", default-features=false}
# fluentbase-sdk = {path = "../fluentbase/crates/sdk"}

[dev-dependencies]
# fluentbase-sdk-testing = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.2.1-dev", default-features=false }
fluentbase-sdk-testing = { git = "https://github.com/fluentlabs-xyz/fluentbase", rev = "1c0a988d", default-features=false }

[build-dependencies]
fluentbase-build = { git = "https://github.com/fluentlabs-xyz/fluentbase", rev = "1c0a988d" }
# fluentbase-build = {path = "../fluentbase/crates/build"}
# fluentbase-build = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.2.1-dev", default-features=false }
# fluentbase-types = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.2.1-dev", default-features=false }
sha256 = "1.0"
chrono = "0.4"
cargo_metadata = "0.20.0"

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

